<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/minutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minutes_uppercase"
        app:layout_constraintBottom_toTopOf="@+id/minutesPicker"
        app:layout_constraintEnd_toEndOf="@+id/minutesPicker"
        app:layout_constraintStart_toStartOf="@+id/minutesPicker"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/secondsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/seconds_uppercase"
        app:layout_constraintBottom_toTopOf="@+id/secondsPicker"
        app:layout_constraintEnd_toEndOf="@+id/secondsPicker"
        app:layout_constraintStart_toStartOf="@+id/secondsPicker"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_separator"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/secondsPicker"
        app:layout_constraintEnd_toStartOf="@+id/secondsPicker"
        app:layout_constraintStart_toEndOf="@+id/minutesPicker"
        app:layout_constraintTop_toBottomOf="@+id/secondsText" />

    <NumberPicker
        android:id="@+id/minutesPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/minutesText" />

    <NumberPicker
        android:id="@+id/secondsPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/secondsText" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/primaryColor"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/wait_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/onPrimaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/minutes_uppercase"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/seconds_uppercase"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>